--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "react/react-in-jsx-scope": "off",
+    "react/self-closing-comp": "off",
+    "react/button-has-type": "off",
     "react/function-component-definition": [
       "error",
       {
