clean up gitignore:

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@ node_modules
 /coverage
 
 # next.js
-/.next/
-/out/
+.next
+out
 
 # production
-/build
+build
 
 # misc
 .DS_Store
@@ -30,7 +30,6 @@ yarn-error.log*
 
 # vercel
 .vercel
-.turbo
 
 # typescript
 *.tsbuildinfo
