--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,6 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
   "dependencies": {
     "apollo-server-lambda": "^3.10.2",
     "graphql": "^16.6.0"
@@ -14,5 +13,8 @@
     "serverless-webpack": "^5.9.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0"
+  },
+  "scripts": {
+    "dev": "sls offline --noPrependStageInUrl"
   }
 }
