--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,16 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.18",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "serverless": "^3.22.0",
     "serverless-offline": "^10.1.0",
     "serverless-webpack": "^5.9.1",
+    "ts-loader": "^9.4.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0"
   },
