--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,13 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "noEmit": false
+    "noEmit": false,
+    "sourceMap": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "index.ts"
+  ],
   "exclude": ["node_modules"]
 }
