--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "serverless-webpack": "^5.9.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.3",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
     "dev": "sls offline --httpPort 5000 --noPrependStageInUrl"
