--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -4,15 +4,15 @@ provider:
   runtime: nodejs16.x
 plugins:
   - serverless-offline
-  - serverless-webpack
-custom:
-  serverless-offline:
-    useChildProcesses: true
-  webpack:
-    webpackConfig: "webpack.config.js"
-    includeModules: true
-    packager: "yarn"
-    excludeFiles:
+#   - serverless-webpack
+# custom:
+#   serverless-offline:
+#     useChildProcesses: true
+#   webpack:
+#     webpackConfig: "webpack.config.js"
+#     includeModules: true
+#     packager: "yarn"
+#     excludeFiles: node_modules
 functions:
   graphql:
     handler: index.handler
@@ -20,4 +20,8 @@ functions:
       - http:
           path: graphql
           method: get
+          cors: true
+      - http:
+          path: graphql
+          method: post
           cors: true
