--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,13 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "prisma": "^4.6.0",
     "serverless": "^3.22.0",
     "serverless-offline": "^10.1.0",
     "serverless-webpack": "^5.9.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.3",
-    "webpack": "^5.74.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack": "^5.74.0"
   },
   "scripts": {
     "dev": "sls offline --httpPort 5000 --noPrependStageInUrl"
