--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "noEmit": false,
     "sourceMap": true,
+    "module": "commonjs"
   },
   "include": ["**/*.ts", "**/*.tsx", "index.ts"],
   "exclude": ["node_modules"]
