--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^6.5.1",
-    "next": "12.2.2",
+    "next": "^13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
