--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "classnames": "^2.3.2",
     "framer-motion": "^6.5.1",
     "next": "^13.0.2",
     "react": "18.2.0",
