add vercel analytics and eslint import resolver for typescript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -57,5 +57,10 @@
         "aspects": ["invalidHref", "preferButton"]
       }
     ]
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    }
   }
 }
