--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scroll": "^1.8.9"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.12",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
