--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.1.1",
     "@prisma/client": "^4.7.1",
     "classnames": "^2.3.2",
     "framer-motion": "^6.5.1",
