--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 node_modules
 /.pnp
@@ -35,3 +33,5 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+yarn.lock
