--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,9 @@
     "react/react-in-jsx-scope": "off",
     "react/button-has-type": "off",
     "react/self-closing-comp": "off",
+    "react/require-default-props": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
     "react/function-component-definition": [
       "error",
       {
