--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@next/font": "^13.1.1",
     "@prisma/client": "^4.7.1",
     "classnames": "^2.3.2",
@@ -17,7 +18,10 @@
     "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-scroll": "^1.8.9"
+    "react-dropdown": "^1.11.0",
+    "react-hook-form": "^7.41.5",
+    "react-scroll": "^1.8.9",
+    "react-select": "^5.7.0"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.12",
