--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.41.5",
+    "react-query": "^3.39.2",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.0"
   },
