--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select": "^5.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "@types/gtag.js": "^0.0.12",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
@@ -32,7 +33,7 @@
     "@types/react-scroll": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -43,10 +44,10 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.7.4"
   }
 }
