--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "^13.1.1",
     "@prisma/client": "^4.7.1",
     "classnames": "^2.3.2",
@@ -22,7 +23,8 @@
     "react-hook-form": "^7.41.5",
     "react-query": "^3.39.2",
     "react-scroll": "^1.8.9",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
