--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.41.5",
     "react-query": "^3.39.2",
+    "react-router-dom": "^6.7.0",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.0",
     "zod": "^3.20.2"
