--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@next/font": "^13.1.1",
     "@prisma/client": "^4.7.1",
+    "bowser": "^2.11.0",
     "classnames": "^2.3.2",
     "framer-motion": "^6.5.1",
     "next": "^13.0.2",
