--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
     "react-hook-form": "^7.41.5",
+    "react-qr-code": "^2.0.11",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.7.0",
     "react-scroll": "^1.8.9",
