--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "^4.7.1",
+    "axios": "^1.3.4",
     "bowser": "^2.11.0",
     "classnames": "^2.3.2",
     "framer-motion": "^6.5.1",
@@ -45,7 +46,7 @@
     "eslint-config-next": "^12.2.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.3.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
