--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "react/button-has-type": "off",
     "react/require-default-props": "off",
     "react/self-closing-comp": "off",
+    "react/no-unused-prop-types": "warn",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "@typescript-eslint/no-unused-vars": "warn",
