--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@hookform/resolvers": "^2.9.10",
     "@prisma/client": "^4.7.1",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "bowser": "^2.11.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.10.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "^13.2.3",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/gtag.js": "^0.0.12",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
