--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "quotes": "off",
     "camelcase": "off",
     "import/no-extraneous-dependencies": "off",
+    "import/prefer-default-export": "off",
     "no-param-reassign": "off",
     "arrow-body-style": "off",
     "react/prop-types": "off",
