--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.0",
     "next": "^13.3.1",
     "next-auth": "^4.22.1",
+    "postmark": "^3.0.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
