--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "bowser": "^2.11.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.10.0",
-    "jsonwebtoken": "^9.0.0",
-    "next": "^13.3.1",
+    "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "postmark": "^3.0.18",
     "react": "18.2.0",
@@ -45,7 +44,7 @@
     "@types/react-scroll": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -56,11 +55,11 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.22",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.11.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "5.0.4"
+    "prisma": "^4.14.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   }
 }
