--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   "rules": {
     "quotes": "off",
     "camelcase": "off",
+    "no-plusplus": "off",
     "import/no-extraneous-dependencies": "off",
     "import/prefer-default-export": "off",
     "no-param-reassign": "off",
