--- a/package.json
+++ b/package.json
@@ -12,53 +12,52 @@
   },
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
-    "@hookform/resolvers": "^3.1.0",
-    "@prisma/client": "^4.7.1",
-    "axios": "^1.3.4",
+    "@hookform/resolvers": "^3.1.1",
+    "@prisma/client": "^4.15.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bowser": "^2.11.0",
     "classnames": "^2.3.2",
-    "framer-motion": "^10.12.10",
-    "next": "^13.4.2",
+    "framer-motion": "^10.12.16",
+    "next": "^13.4.5",
     "next-auth": "^4.22.1",
     "postmark": "^3.0.18",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-dropdown": "^1.11.0",
-    "react-hook-form": "^7.43.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-qr-code": "^2.0.11",
     "react-qr-reader": "^3.0.0-beta-1",
-    "react-router-dom": "^6.7.0",
+    "react-router-dom": "^6.12.1",
     "react-scroll": "^1.8.9",
-    "react-select": "^5.7.0",
-    "zod": "^3.20.2"
+    "react-select": "^5.7.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.22.5",
     "@types/bcrypt": "^5.0.0",
     "@types/gtag.js": "^0.0.12",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "@types/react-scroll": "^1.8.5",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@types/node": "^20.3.0",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@types/react-scroll": "^1.8.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
+    "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "^13.4.5",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.14.0",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
