--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "**/*.tsx",
     "middleware.ts",
     ".next/types/**/*.ts"
-  ],
+, "emails/index.js"  ],
   "exclude": [
     "node_modules"
   ],
