--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "es2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -29,20 +25,13 @@
     "**/*.ts",
     "**/*.tsx",
     "middleware.ts",
-    ".next/types/**/*.ts"
-, "emails/index.js"  ],
-  "exclude": [
-    "node_modules"
+    ".next/types/**/*.ts",
+    "emails/index.js"
   ],
+  "exclude": ["node_modules"],
   "paths": {
-    "@/app/**/*": [
-      "app/**/*"
-    ],
-    "@/utils/*": [
-      "utils/*"
-    ],
-    "@/db.ts": [
-      "db.ts"
-    ]
+    "@/app/**/*": ["app/**/*"],
+    "@/utils/*": ["utils/*"],
+    "@/db.ts": ["db.ts"]
   }
 }
