--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-qr-code": "^2.0.11",
-    "react-qr-reader": "^3.0.0-beta-1",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.3",
     "zod": "^3.21.4"
@@ -56,6 +55,7 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "prisma": "^5.2.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.95.0"
   }
 }
