--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "es2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,7 +23,7 @@
       {
         "name": "next"
       }
-    ]
+    ],
   },
   "include": [
     "**/*.ts",
@@ -28,10 +32,18 @@
     ".next/types/**/*.ts",
     "emails/index.js"
   ],
-  "exclude": ["node_modules"],
+  "exclude": [
+    "node_modules"
+  ],
   "paths": {
-    "@/app/**/*": ["app/**/*"],
-    "@/utils/*": ["utils/*"],
-    "@/db.ts": ["db.ts"]
+    "@/app/**/*": [
+      "app/**/*"
+    ],
+    "@/utils/*": [
+      "utils/*"
+    ],
+    "@/db.ts": [
+      "db.ts"
+    ]
   }
 }
