--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-qr-code": "^2.0.11",
+    "react-router-dom": "^6.28.0",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.3",
     "zod": "^3.21.4"
